--- a/media.html
+++ b/media.html
@@ -2,17 +2,19 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width"
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="Jennifer Ortiz" content="Jhene Aiko">
     <title>Jhene Aiko Website</title>
-    <link rel="stylesheet" href="./assets/stylesheets/media.css"
+    <link rel="stylesheet" href="./assets/stylesheets/about.css"
   </head>
   <body>
     <header>
       <div class="container">
+        <div id="branding">
+          <li><a href="index.html"><h1>Jhené Aiko</h1></li>
+        </div>
         <nav>
           <ul>
-            <li><a href="index.html">Jhené Aiko</a></li>
             <li><a href="shows.html">Shows</a></li>
             <li><a href="music.html">Music</a></li>
             <li><a href="media.html">Media</a></li>
@@ -22,4 +24,8 @@
         </nav>
       </div>
     </header>
+  </body>
+
+  <body>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/B_eCv3P1WWg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </body>
