--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width"
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="Jennifer Ortiz" content="Jhene Aiko">
     <title>Jhene Aiko Website</title>
-    <link rel="stylesheet" href="./assets/stylesheets/index.css"
+    <link rel="stylesheet" href="./assets/stylesheets/about.css"
   </head>
   <body>
     <header>
