--- a/music.html
+++ b/music.html
@@ -2,28 +2,28 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width"
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="Jennifer Ortiz" content="Jhene Aiko">
     <title>Jhene Aiko Website</title>
     <link rel="stylesheet" href="./assets/stylesheets/about.css"
   </head>
-
-  <body class="homepage">
-  <div class="header">
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12 col-sm-4">
-            <div></div>
-            <div></div>
-            <div></div>
-          </div>
+  <body>
+    <header>
+      <div class="container">
+        <div id="branding">
+          <li><a href="index.html"><h1>Jhené Aiko</h1></li>
         </div>
-        <nav id="MainMenu" class="col-xs-12 col-sm-8">
-          <a href="shows.html">Shows</a>
-          <a href="music.html">Music</a>
-          <a href="media.html">Media</a>
-          <a href="store.html">Store</a>
-          <a href="about.html">About</a>
+        <nav>
+          <ul>
+            <li><a href="shows.html">Shows</a></li>
+            <li><a href="music.html">Music</a></li>
+            <li><a href="media.html">Media</a></li>
+            <li><a href="store.html">Store</a></li>
+            <li><a href="about.html">About</a></li>
+          </ul>
         </nav>
       </div>
-    </div>
+    </header>
+  </body>
+
+<img src="./assets/images/jhenephoto1.jpg" alt="Jhene Aiko" style="width:100%;height:100%;">
