--- a/shows.html
+++ b/shows.html
@@ -7,6 +7,12 @@
     <title>Jhene Aiko Website</title>
     <link rel="stylesheet" href="./assets/stylesheets/about.css"
   </head>
+
+<!-- Header Showcase -->
+<header id="showcase" class="grid">
+    <div class="bg-image"></div>
+</header>
+
   <body>
     <header>
       <div class="container">
@@ -24,9 +30,11 @@
         </nav>
       </div>
     </header>
-  </body>
 
-<img src="./assets/images/jhenephoto2.jpg" alt="Jhene Aiko" border="0" style="width:100%;height:100%;">
+  <main>
+      <div class="page-banner about-banner">
+      </div>
+  </main>
 <img src="./assets/images/jhenephoto3.jpg" alt="Jhene Aiko" border="0" style="width:100%;height:100%;">
 
 <main>
