Fixing shows html
code ish hard

--- a/shows.html
+++ b/shows.html
@@ -5,13 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="Jennifer Ortiz" content="Jhene Aiko">
     <title>Jhene Aiko Website</title>
-    <link rel="stylesheet" href="./assets/stylesheets/about.css"
+    <link rel="stylesheet" href="./assets/stylesheets/shows.css"
   </head>
-
-<!-- Header Showcase -->
-<header id="showcase" class="grid">
-    <div class="bg-image"></div>
-</header>
 
   <body>
     <header>
@@ -30,11 +25,8 @@
         </nav>
       </div>
     </header>
+<img src="./assets/images/jhenephoto2.jpg" alt="Jhene Aiko" border="0" style="width:100%;height:100%;">
 
-  <main>
-      <div class="page-banner about-banner">
-      </div>
-  </main>
 <img src="./assets/images/jhenephoto3.jpg" alt="Jhene Aiko" border="0" style="width:100%;height:100%;">
 
 <main>
