--- a/about.html
+++ b/about.html
@@ -27,6 +27,8 @@
   </body>
 
 <img src="./assets/images/jhenephoto1.jpg" alt="Jhene Aiko" style="width:100%;height:100%;">
+<img src="./assets/videos/jheneaiko.gif" alt="This is my animated image" height="30%" width="30%">
+
 
   <section id="main">
     <div class="container">
