Fixing Sizing of Banner
baby steps

--- a/shows.html
+++ b/shows.html
@@ -25,129 +25,125 @@
         </nav>
       </div>
     </header>
-<img src="./assets/images/jhenephoto2.jpg" alt="Jhene Aiko" border="0" style="width:100%;height:100%;">
 
-<img src="./assets/images/jhenephoto3.jpg" alt="Jhene Aiko" border="0" style="width:100%;height:100%;">
+<section id="showcase">
+  <div class="container"></div>
+</section>
 
 <main>
-    <div class="page-banner tour-dates-banner">
-      <h1 class="secondary-font banner-title">Jhené Aiko</h1>
+<body>
+    <div class="col-xs-12">
+      <h1>Tour Dates</h1>
     </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12">
-          <h1>Tour Dates</h1>
-        </div>
-        <div class="col-xs-12" style="overflow-x:auto;">
-          <table style="width: 100%; min-width: 1000px">
-            <tr>
-              <th>Date</th>
-              <th>Location</th>
-              <th>Venue</th>
-              <th>Buy</th>
-            </tr>
-            <tr>
-              <td>11/14</td>
-              <td>Detroit, MI</td>
-              <td><a href="https://www.majesticdetroit.com/" target="_blank">Majestic Theatre</a>
-              </td>
-              <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
-            </tr>
-            <tr>
-              <td>11/17</td>
-              <td>Philadelphia, PA</td>
-              <td><a href="https://www.thetroc.com/" target="_blank">Trocadero Theatre</a>
-              </td>
-              <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
-            </tr>
-            <tr>
-              <td>11/19</td>
-              <td>Toronto, Canada</td>
-              <td><a href="https://thephoenixconcerttheatre.com/" target="_blank">The Phoenix Concert Theatre</a>
-              </td>
-              <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
-            </tr>
-            <tr>
-              <td>11/20</td>
-              <td>New York, NY</td>
-              <td><a href="http://www.mercuryeastpresents.com/irvingplaza" target="_blank">Irving Plaza</a>
-              </td>
-              <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
-            </tr>
-            <tr>
-              <td>11/21</td>
-              <td>Spring, MD</td>
-              <td><a href="http://www.fillmoresilverspring.com/" target="_blank">The Fillmore Silver</a>
-              </td>
-              <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
-            </tr>
-            <tr>
-              <td>11/24</td>
-              <td>Atlanta, GA</td>
-              <td><a href="http://www.masqueradeatlanta.com/" target="_blank">The Masquerade</a>
-              </td>
-              <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
-            </tr>
-            <tr>
-              <td>11/26</td>
-              <td>Houston, TX</td>
-              <td><a href="https://www.houseofblues.com/houston" target="_blank">House of Blues</a>
-              </td>
-              <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
-            </tr>
-            <tr>
-              <td>11/27</td>
-              <td>Dallas, TX</td>
-              <td><a href="https://www.houseofblues.com/dallas" target="_blank">House of Blues</a>
-              </td>
-              <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
-            </tr>
-            <tr>
-              <td>12/06</td>
-              <td>Portland, OR</td>
-              <td><a href="http://roselandpdx.com/" target="_blank">Roseland Theater</a>
-              </td>
-              <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
-            </tr>
-            <tr>
-              <td>12/07</td>
-              <td>Seattle, WA</td>
-              <td><a href="https://www.showboxpresents.com/" target="_blank">Showbox SoDo</a>
-              </td>
-              <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
-            </tr>
-            <tr>
-              <td>12/08</td>
-              <td>Vancouver, Canada</td>
-              <td><a href="https://www.facebook.com/thevoguetheatrevancouver/" target="_blank">Vogue Theatre</a>
-              </td>
-              <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
-            </tr>
-            <tr>
-              <td>12/10</td>
-              <td>San Francisco, CA</td>
-              <td><a href="https://www.theregencyballroom.com/" target="_blank">The Regency Ballroom</a>
-              </td>
-              <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
-            </tr>
-            <tr>
-              <td>12/13</td>
-              <td>Los Angeles, CA</td>
-              <td><a href="https://www.thenovodtla.com/" target="_blank">The Novo by Microsoft</a>
-              </td>
-              <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
-            </tr>
-            <tr>
-              <td>12/27</td>
-              <td>Honolulu, HI</td>
-              <td><a href="http://jointherepublik.com/" target="_blank">The Republik</a>
-              </td>
-              <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
-            </tr>
-          </table>
-        </div>
-      </div>
+    <div class="col-xs-12" style="overflow-x:auto;">
+      <table style="width: 0%; min-width: 800px">
+        <tr>
+          <th>Date</th>
+          <th>Location</th>
+          <th>Venue</th>
+          <th>Buy</th>
+        </tr>
+        <tr>
+          <td>11/14</td>
+          <td>Detroit, MI</td>
+          <td><a href="https://www.majesticdetroit.com/" target="_blank">Majestic Theatre</a>
+          </td>
+          <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
+        </tr>
+        <tr>
+          <td>11/17</td>
+          <td>Philadelphia, PA</td>
+          <td><a href="https://www.thetroc.com/" target="_blank">Trocadero Theatre</a>
+          </td>
+          <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
+        </tr>
+        <tr>
+          <td>11/19</td>
+          <td>Toronto, Canada</td>
+          <td><a href="https://thephoenixconcerttheatre.com/" target="_blank">The Phoenix Concert Theatre</a>
+          </td>
+          <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
+        </tr>
+        <tr>
+          <td>11/20</td>
+          <td>New York, NY</td>
+          <td><a href="http://www.mercuryeastpresents.com/irvingplaza" target="_blank">Irving Plaza</a>
+          </td>
+          <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
+        </tr>
+        <tr>
+          <td>11/21</td>
+          <td>Spring, MD</td>
+          <td><a href="http://www.fillmoresilverspring.com/" target="_blank">The Fillmore Silver</a>
+          </td>
+          <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
+        </tr>
+        <tr>
+          <td>11/24</td>
+          <td>Atlanta, GA</td>
+          <td><a href="http://www.masqueradeatlanta.com/" target="_blank">The Masquerade</a>
+          </td>
+          <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
+        </tr>
+        <tr>
+          <td>11/26</td>
+          <td>Houston, TX</td>
+          <td><a href="https://www.houseofblues.com/houston" target="_blank">House of Blues</a>
+          </td>
+          <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
+        </tr>
+        <tr>
+          <td>11/27</td>
+          <td>Dallas, TX</td>
+          <td><a href="https://www.houseofblues.com/dallas" target="_blank">House of Blues</a>
+          </td>
+          <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
+        </tr>
+        <tr>
+          <td>12/06</td>
+          <td>Portland, OR</td>
+          <td><a href="http://roselandpdx.com/" target="_blank">Roseland Theater</a>
+          </td>
+          <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
+        </tr>
+        <tr>
+          <td>12/07</td>
+          <td>Seattle, WA</td>
+          <td><a href="https://www.showboxpresents.com/" target="_blank">Showbox SoDo</a>
+          </td>
+          <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
+        </tr>
+        <tr>
+          <td>12/08</td>
+          <td>Vancouver, Canada</td>
+          <td><a href="https://www.facebook.com/thevoguetheatrevancouver/" target="_blank">Vogue Theatre</a>
+          </td>
+          <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
+        </tr>
+        <tr>
+          <td>12/10</td>
+          <td>San Francisco, CA</td>
+          <td><a href="https://www.theregencyballroom.com/" target="_blank">The Regency Ballroom</a>
+          </td>
+          <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
+        </tr>
+        <tr>
+          <td>12/13</td>
+          <td>Los Angeles, CA</td>
+          <td><a href="https://www.thenovodtla.com/" target="_blank">The Novo by Microsoft</a>
+          </td>
+          <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
+        </tr>
+        <tr>
+          <td>12/27</td>
+          <td>Honolulu, HI</td>
+          <td><a href="http://jointherepublik.com/" target="_blank">The Republik</a>
+          </td>
+          <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
+        </tr>
+      </table>
     </div>
-  </main>
+  </div>
+</main>
 </body>
 </html>
