Moving border titles around
aaaaaaaaaaaaaaaaaaaaaaaaaaarrg

--- a/music.html
+++ b/music.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="Jennifer Ortiz" content="Jhene Aiko">
-    <title>Jhene Aiko Website</title>
+    <title>Jhené Aiko | Music</title>
     <link rel="stylesheet" href="./assets/stylesheets/about.css"
   </head>
   <body>
@@ -15,11 +15,11 @@
         </div>
         <nav>
           <ul>
-            <li><a href="shows.html">Shows</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="music.html">Music</a></li>
+            <li><a href="shows.html">Tour Dates</a></li>
             <li><a href="media.html">Media</a></li>
             <li><a href="store.html">Store</a></li>
-            <li><a href="about.html">About</a></li>
           </ul>
         </nav>
       </div>
