--- a/shows.html
+++ b/shows.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="Jennifer Ortiz" content="Jhene Aiko">
-    <title>Jhene Aiko Website</title>
+    <title>Jhené Aiko | Tour Dates</title>
     <link rel="stylesheet" href="./assets/stylesheets/shows.css"
   </head>
 
@@ -16,11 +16,11 @@
         </div>
         <nav>
           <ul>
-            <li><a href="shows.html">Shows</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="music.html">Music</a></li>
+            <li><a href="shows.html">Tour Dates</a></li>
             <li><a href="media.html">Media</a></li>
             <li><a href="store.html">Store</a></li>
-            <li><a href="about.html">About</a></li>
           </ul>
         </nav>
       </div>
@@ -31,16 +31,21 @@
 </section>
 
 <main>
-<body>
-    <div class="col-xs-12">
-      <h1>Tour Dates</h1>
-    </div>
-    <div class="col-xs-12" style="overflow-x:auto;">
-      <table style="width: 0%; min-width: 800px">
+  <div class="container">
+    <img src="./assets/images/jhenephoto3.jpg" alt="Singing" style="width:100%;height:100%;">
+  <div class="centered">
+    <div class="row">
+      <div class="col-xs-12">
+        <h1>Jhené Aiko Live</h1>
+      </div>
+      <div class="col-xs-12" style="overflow-x:auto;">
+        <table style="width: 100%; min-width: 1000px">
         <tr>
           <th>Date</th>
           <th>Location</th>
+          <th>With</th>
           <th>Venue</th>
+          <th>Time</th>
           <th>Buy</th>
         </tr>
         <tr>
@@ -144,6 +149,7 @@
       </table>
     </div>
   </div>
+</div>
 </main>
 </body>
 </html>
