Adding in everything
Cleaning up stuff

--- a/media.html
+++ b/media.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="Jennifer Ortiz" content="Jhene Aiko">
-    <title>Jhené Aiko | Media</title>
-    <link rel="stylesheet" href="./assets/stylesheets/about.css"
+    <title>Jhené Aiko | About</title>
+    <link rel="stylesheet" href="./assets/stylesheets/media.css" />
+    <link rel="stylesheet" href="./assets/stylesheets/lightbox.min.css" />
   </head>
+
   <body>
     <header>
       <div class="container">
@@ -26,6 +28,50 @@
     </header>
   </body>
 
-  <body>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/B_eCv3P1WWg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </body>
+  <section id="showcase">
+    <div class="container"></div>
+  </section>
+
+
+<div class="container">
+  <div class="media-list">
+    <div class="media-card-wrapper">
+        <a href="./assets/images/lightbox/jhene1.jpg" data-lightbox="Jhene">
+          <img src="./assets/images/lightbox/jhene1-thumbnail.jpg" />
+        </a>
+
+        <a href="./assets/images/lightbox/jhene2.jpg" data-lightbox="Jhene">
+          <img src="./assets/images/lightbox/jhene2-thumbnail.jpg" />
+        </a>
+
+        <a href="./assets/images/lightbox/jhene3.jpg" data-lightbox="Jhene">
+          <img src="./assets/images/lightbox/jhene3-thumbnail.jpg" />
+        </a>
+
+        <a href="./assets/images/lightbox/jhene4.jpg" data-lightbox="Jhene">
+          <img src="./assets/images/lightbox/jhene4-thumbnail.jpg" />
+        </a>
+
+        <a href="./assets/images/lightbox/jhene5.jpg" data-lightbox="Jhene">
+          <img src="./assets/images/lightbox/jhene5-thumbnail.jpg" />
+        </a>
+
+        <a href="./assets/images/lightbox/jhene6.jpg" data-lightbox="Jhene">
+          <img src="./assets/images/lightbox/jhene6-thumbnail.jpg" />
+        </a>
+
+        <a href="./assets/images/lightbox/jhene7.jpg" data-lightbox="Jhene">
+          <img src="./assets/images/lightbox/jhene7-thumbnail.jpg" />
+        </a>
+
+        <a href="./assets/images/lightbox/jhene8.jpg" data-lightbox="Jhene">
+          <img src="./assets/images/lightbox/jhene8-thumbnail.jpg" />
+        </a>
+    </div>
+  </div>
+</div>
+
+<script src="./assets/javascripts/jquery.js"></script>
+<script src="./assets/javascripts/lightbox.min.js"></script>
+</body>
+</html>
