--- a/music.html
+++ b/music.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="Jennifer Ortiz" content="Jhene Aiko">
-    <title>Jhené Aiko | Music</title>
-    <link rel="stylesheet" href="./assets/stylesheets/about.css"
+    <title>Jhené Aiko | Tour Dates</title>
+    <link rel="stylesheet" href="./assets/stylesheets/music.css"
   </head>
+
   <body>
     <header>
       <div class="container">
@@ -24,6 +25,42 @@
         </nav>
       </div>
     </header>
-  </body>
 
-<img src="./assets/images/jhenephoto1.jpg" alt="Jhene Aiko" style="width:100%;height:100%;">
+<section id="showcase">
+  <div class="container"></div>
+</section>
+
+<!-- Section A -->
+<section id="section-a" class="grid">
+  <div class="box">
+    <p><iframe src="https://open.spotify.com/embed/album/7CAAClnSiXdMibPT1oyl4k" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></p>
+  </div>
+  <div class="box">
+    <h2 class="content-title">A</h2>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio earum porro deserunt, deleniti, quae facere repudiandae, officiis est exercitationem nobis iusto doloremque! Soluta excepturi in aut suscipit amet temporibus quo?</p>
+  </div>
+</section>
+</main>
+
+<!-- Section B -->
+<section id="section-b" class="grid">
+  <div class="box">
+    <h2 class="content-title">A</h2>
+  </div>
+  <div class="box">
+    <p><iframe src="https://open.spotify.com/embed/album/6UKXuiWFuwxzC5rd0SW4Bo" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></p>
+  </div>
+</section>
+</main>
+
+<!-- Section C -->
+<section id="section-c" class="grid">
+  <div class="box">
+    <p><iframe src="https://open.spotify.com/embed/album/73TNMu44lT0m1h1Nn6Bfiq" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></p>
+  </div>
+  <div class="box">
+    <h2 class="content-title">A</h2>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio earum porro deserunt, deleniti, quae facere repudiandae, officiis est exercitationem nobis iusto doloremque! Soluta excepturi in aut suscipit amet temporibus quo?</p>
+  </div>
+</section>
+</main>
