--- a/about.html
+++ b/about.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="Jennifer Ortiz" content="Jhene Aiko">
     <title>Jhené Aiko | About</title>
-    <link rel="stylesheet" href="./assets/stylesheets/about.css"
+    <link rel="stylesheet" href="./assets/stylesheets/about.css"/>
   </head>
+
   <body>
     <header>
       <div class="container">
@@ -26,7 +27,10 @@
     </header>
   </body>
 
-<img src="./assets/images/jhenephoto1.jpg" alt="Jhene Aiko" style="width:100%;height:100%;">
+<section id="showcase">
+  <div class="container"></div>
+</section>
+
 <img src="./assets/videos/jheneaiko.gif" alt="This is my animated image" height="30%" width="30%">
 
 
