--- a/media.html
+++ b/media.html
@@ -33,42 +33,55 @@
   </section>
 
 
-<div class="container">
-  <div class="media-list">
-    <div class="media-card-wrapper">
-        <a href="./assets/images/lightbox/jhene1.jpg" data-lightbox="Jhene">
-          <img src="./assets/images/lightbox/jhene1-thumbnail.jpg" />
-        </a>
-
-        <a href="./assets/images/lightbox/jhene2.jpg" data-lightbox="Jhene">
-          <img src="./assets/images/lightbox/jhene2-thumbnail.jpg" />
-        </a>
-
-        <a href="./assets/images/lightbox/jhene3.jpg" data-lightbox="Jhene">
-          <img src="./assets/images/lightbox/jhene3-thumbnail.jpg" />
-        </a>
-
-        <a href="./assets/images/lightbox/jhene4.jpg" data-lightbox="Jhene">
-          <img src="./assets/images/lightbox/jhene4-thumbnail.jpg" />
-        </a>
-
-        <a href="./assets/images/lightbox/jhene5.jpg" data-lightbox="Jhene">
-          <img src="./assets/images/lightbox/jhene5-thumbnail.jpg" />
-        </a>
-
-        <a href="./assets/images/lightbox/jhene6.jpg" data-lightbox="Jhene">
-          <img src="./assets/images/lightbox/jhene6-thumbnail.jpg" />
-        </a>
-
-        <a href="./assets/images/lightbox/jhene7.jpg" data-lightbox="Jhene">
-          <img src="./assets/images/lightbox/jhene7-thumbnail.jpg" />
-        </a>
-
-        <a href="./assets/images/lightbox/jhene8.jpg" data-lightbox="Jhene">
-          <img src="./assets/images/lightbox/jhene8-thumbnail.jpg" />
-        </a>
+<section id="boxes">
+  <div class="container">
+    <div class="box">
+      <a href="./assets/images/lightbox/jhene1.jpg" data-lightbox="Jhene">
+        <img src="./assets/images/lightbox/jhene1-thumbnail.jpg" />
+      </a>
+    </div>
+    <div class="box">
+      <a href="./assets/images/lightbox/jhene2.jpg" data-lightbox="Jhene">
+        <img src="./assets/images/lightbox/jhene2-thumbnail.jpg" />
+      </a>
+    </div>
+    <div class="box">
+      <a href="./assets/images/lightbox/jhene3.jpg" data-lightbox="Jhene">
+        <img src="./assets/images/lightbox/jhene3-thumbnail.jpg" />
+      </a>
+    </div>
+    <div class="box">
+      <a href="./assets/images/lightbox/jhene4.jpg" data-lightbox="Jhene">
+        <img src="./assets/images/lightbox/jhene4-thumbnail.jpg" />
+      </a>
+    </div>
+    <div class="box">
+      <a href="./assets/images/lightbox/jhene5.jpg" data-lightbox="Jhene">
+        <img src="./assets/images/lightbox/jhene5-thumbnail.jpg" />
+      </a>
+    </div>
+    <div class="box">
+      <a href="./assets/images/lightbox/jhene6.jpg" data-lightbox="Jhene">
+        <img src="./assets/images/lightbox/jhene6-thumbnail.jpg" />
+      </a>
+    </div>
+    <div class="box">
+      <a href="./assets/images/lightbox/jhene7.jpg" data-lightbox="Jhene">
+        <img src="./assets/images/lightbox/jhene7-thumbnail.jpg" />
+      </a>
+    </div>
+    <div class="box">
+      <a href="./assets/images/lightbox/jhene8.jpg" data-lightbox="Jhene">
+        <img src="./assets/images/lightbox/jhene8-thumbnail.jpg" />
+      </a>
+    </div>
     </div>
   </div>
+</section>
+
+
+<div class="video">
+  <iframe title="vimeo-player" src="https://player.vimeo.com/video/77991957" width="640" height="360" frameborder="0" allowfullscreen></iframe>
 </div>
 
 <script src="./assets/javascripts/jquery.js"></script>
