--- a/shows.html
+++ b/shows.html
@@ -31,9 +31,9 @@
 </section>
 
 <main>
-  <div class="container">
+  <div class="container-a">
     <img src="./assets/images/jhenephoto3.jpg" alt="Singing" style="width:100%;height:100%;">
-  <div class="centered">
+  <div class="centered-a">
     <div class="row">
       <div class="col-xs-12">
         <h1>Jhené Aiko Live</h1>
@@ -51,99 +51,127 @@
         <tr>
           <td>11/14</td>
           <td>Detroit, MI</td>
+          <td>Willow Smith</td>
           <td><a href="https://www.majesticdetroit.com/" target="_blank">Majestic Theatre</a>
           </td>
+          <td>Doors: 7pm</td>
           <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
         </tr>
         <tr>
           <td>11/17</td>
           <td>Philadelphia, PA</td>
+          <td>Willow Smith & Kodie Shane</td>
           <td><a href="https://www.thetroc.com/" target="_blank">Trocadero Theatre</a>
           </td>
+          <td>Doors: 7pm</td>
           <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
         </tr>
         <tr>
           <td>11/19</td>
           <td>Toronto, Canada</td>
+          <td>Willow Smith & Kodie Shane</td>
           <td><a href="https://thephoenixconcerttheatre.com/" target="_blank">The Phoenix Concert Theatre</a>
           </td>
+          <td>Doors: 7pm</td>
           <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
         </tr>
         <tr>
           <td>11/20</td>
           <td>New York, NY</td>
+          <td>Willow Smith & Kodie Shane</td>
           <td><a href="http://www.mercuryeastpresents.com/irvingplaza" target="_blank">Irving Plaza</a>
           </td>
+          <td>Doors: 7pm</td>
           <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
         </tr>
         <tr>
           <td>11/21</td>
           <td>Spring, MD</td>
+          <td>Willow Smith</td>
           <td><a href="http://www.fillmoresilverspring.com/" target="_blank">The Fillmore Silver</a>
           </td>
+          <td>Doors: 7pm</td>
           <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
         </tr>
         <tr>
           <td>11/24</td>
           <td>Atlanta, GA</td>
+          <td>Willow Smith & DJ Kitty Cash</td>
           <td><a href="http://www.masqueradeatlanta.com/" target="_blank">The Masquerade</a>
           </td>
+          <td>Doors: 7pm</td>
           <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
         </tr>
         <tr>
           <td>11/26</td>
           <td>Houston, TX</td>
+          <td>Willow Smith & DJ Kitty Cash</td>
           <td><a href="https://www.houseofblues.com/houston" target="_blank">House of Blues</a>
           </td>
+          <td>Doors: 7pm</td>
           <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
         </tr>
         <tr>
           <td>11/27</td>
           <td>Dallas, TX</td>
+          <td>Willow Smith</td>
           <td><a href="https://www.houseofblues.com/dallas" target="_blank">House of Blues</a>
           </td>
+          <td>Doors: 7pm</td>
           <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
         </tr>
         <tr>
           <td>12/06</td>
           <td>Portland, OR</td>
+          <td>Willow Smith</td>
           <td><a href="http://roselandpdx.com/" target="_blank">Roseland Theater</a>
           </td>
+          <td>Doors: 7pm</td>
           <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
         </tr>
         <tr>
           <td>12/07</td>
           <td>Seattle, WA</td>
+          <td>Willow Smith</td>
           <td><a href="https://www.showboxpresents.com/" target="_blank">Showbox SoDo</a>
           </td>
+          <td>Doors: 7pm</td>
           <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
         </tr>
         <tr>
           <td>12/08</td>
           <td>Vancouver, Canada</td>
+          <td>Willow Smith & Swae Lee</td>
           <td><a href="https://www.facebook.com/thevoguetheatrevancouver/" target="_blank">Vogue Theatre</a>
           </td>
+          <td>Doors: 7pm</td>
           <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
         </tr>
         <tr>
           <td>12/10</td>
           <td>San Francisco, CA</td>
+          <td>Willow Smith & Big Sean</td>
           <td><a href="https://www.theregencyballroom.com/" target="_blank">The Regency Ballroom</a>
           </td>
+          <td>Doors: 7pm</td>
           <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
         </tr>
         <tr>
           <td>12/13</td>
           <td>Los Angeles, CA</td>
+          <td>Willow Smith & Big Sean</td>
           <td><a href="https://www.thenovodtla.com/" target="_blank">The Novo by Microsoft</a>
           </td>
+          <td>Doors: 7pm</td>
           <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
         </tr>
         <tr>
           <td>12/27</td>
           <td>Honolulu, HI</td>
+          <td>Willow Smith</td>
           <td><a href="http://jointherepublik.com/" target="_blank">The Republik</a>
           </td>
+          <td>Doors: 7pm</td>
           <td><a href="https://www.stubhub.com/jhene-aiko-tickets/performer/726564/" target="_blank">Stub Hub</a></td>
         </tr>
       </table>
