--- a/store.html
+++ b/store.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="Jennifer Ortiz" content="Jhene Aiko">
     <title>Jhené Aiko | Store</title>
-    <link rel="stylesheet" href="./assets/stylesheets/about.css"
+    <link rel="stylesheet" href="./assets/stylesheets/store.css"
   </head>
+
   <body>
     <header>
       <div class="container">
@@ -24,6 +25,84 @@
         </nav>
       </div>
     </header>
-  </body>
 
-<img src="./assets/images/jhenephoto4.jpg" alt="Jhene Aiko" style="width:100%;height:100%;">
+<section id="showcase">
+  <div class="container"></div>
+</section>
+
+<div id="myBtnContainer">
+  <button class="btn active" onclick="filterSelection('all')"> Show all</button>
+  <button class="btn" onclick="filterSelection('shirts')"> Shirts</button>
+
+  <div class="container">
+    <div class="filterDiv shirts">
+      <img src="./assets/images/merch/tshirt.jpg" />
+    </div>
+    <div class="filterDiv shirts">
+      <img src="./assets/images/merch/tshirt2.jpg" />
+    </div>
+    <div class="filterDiv shirts">
+      <img src="./assets/images/merch/tshirt3.jpg" />
+    </div>
+    <div class="filterDiv all">
+      <img src="./assets/images/merch/joggers.jpg" />
+    </div>
+    <div class="filterDiv all">
+      <img src="./assets/images/merch/hoodie.jpg" />
+    </div>
+    <div class="filterDiv all">
+      <img src="./assets/images/merch/hat.jpg" />
+    </div>
+  </div>
+
+<script>
+filterSelection("all")
+function filterSelection(c) {
+  var x, i;
+  x = document.getElementsByClassName("filterDiv");
+  if (c == "all") c = "";
+// Add the "show" class (display:block) to the filtered elements, and remove the "show" class from the elements that are not selected
+  for (i = 0; i < x.length; i++) {
+    w3RemoveClass(x[i], "show");
+    if (x[i].className.indexOf(c) > -1) w3AddClass(x[i], "show");
+  }
+}
+
+// Show filtered elements
+function w3AddClass(element, name) {
+  var i, arr1, arr2;
+  arr1 = element.className.split(" ");
+  arr2 = name.split(" ");
+  for (i = 0; i < arr2.length; i++) {
+    if (arr1.indexOf(arr2[i]) == -1) {
+      element.className += " " + arr2[i];
+    }
+  }
+}
+
+// Hide elements that are not selected
+function w3RemoveClass(element, name) {
+  var i, arr1, arr2;
+  arr1 = element.className.split(" ");
+  arr2 = name.split(" ");
+  for (i = 0; i < arr2.length; i++) {
+    while (arr1.indexOf(arr2[i]) > -1) {
+      arr1.splice(arr1.indexOf(arr2[i]), 1);
+    }
+  }
+  element.className = arr1.join(" ");
+  }
+
+// Add active class to the current control button (highlight it)
+var btnContainer = document.getElementById("myBtnContainer");
+var btns = btnContainer.getElementsByClassName("btn");
+for (var i = 0; i < btns.length; i++) {
+  btns[i].addEventListener("click", function() {
+    var current = document.getElementsByClassName("active");
+    current[0].className = current[0].className.replace(" active", "");
+  this.className += " active";
+  });
+}
+  </script>
+  </body>
+  </html>
