--- a/music.html
+++ b/music.html
@@ -30,37 +30,14 @@
   <div class="container"></div>
 </section>
 
-<!-- Section A -->
-<section id="section-a" class="grid">
-  <div class="box">
-    <p><iframe src="https://open.spotify.com/embed/album/7CAAClnSiXdMibPT1oyl4k" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></p>
-  </div>
-  <div class="box">
-    <h2 class="content-title">A</h2>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio earum porro deserunt, deleniti, quae facere repudiandae, officiis est exercitationem nobis iusto doloremque! Soluta excepturi in aut suscipit amet temporibus quo?</p>
-  </div>
-</section>
-</main>
+<div class="container-a">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/o4os5TXo6Vk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
-<!-- Section B -->
-<section id="section-b" class="grid">
-  <div class="box">
-    <h2 class="content-title">A</h2>
+<div class="container-b">
+    <iframe src="https://open.spotify.com/embed/album/7CAAClnSiXdMibPT1oyl4k" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    <iframe src="https://open.spotify.com/embed/album/6UKXuiWFuwxzC5rd0SW4Bo" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    <iframe src="https://open.spotify.com/embed/album/73TNMu44lT0m1h1Nn6Bfiq" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
   </div>
-  <div class="box">
-    <p><iframe src="https://open.spotify.com/embed/album/6UKXuiWFuwxzC5rd0SW4Bo" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></p>
-  </div>
-</section>
-</main>
 
-<!-- Section C -->
-<section id="section-c" class="grid">
-  <div class="box">
-    <p><iframe src="https://open.spotify.com/embed/album/73TNMu44lT0m1h1Nn6Bfiq" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></p>
-  </div>
-  <div class="box">
-    <h2 class="content-title">A</h2>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio earum porro deserunt, deleniti, quae facere repudiandae, officiis est exercitationem nobis iusto doloremque! Soluta excepturi in aut suscipit amet temporibus quo?</p>
-  </div>
-</section>
-</main>
+  </html>
