--- a/media.html
+++ b/media.html
@@ -81,7 +81,10 @@
 
 
 <div class="video">
-  <iframe title="vimeo-player" src="https://player.vimeo.com/video/77991957" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+  <iframe src="https://player.vimeo.com/video/77990098?byline=0&portrait=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+  <iframe src="https://player.vimeo.com/video/109198422?byline=0&portrait=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+  <iframe src="https://player.vimeo.com/video/30917831?byline=0&portrait=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+  <iframe src="https://player.vimeo.com/video/184920748?byline=0&portrait=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 </div>
 
 <script src="./assets/javascripts/jquery.js"></script>
