--- a/store.html
+++ b/store.html
@@ -30,9 +30,11 @@
   <div class="container"></div>
 </section>
 
+<div class="container-a">
 <div id="myBtnContainer">
   <button class="btn active" onclick="filterSelection('all')"> Show all</button>
   <button class="btn" onclick="filterSelection('shirts')"> Shirts</button>
+  <button class="btn" onclick="filterSelection('hat')"> Hat</button>
 
   <div class="container">
     <div class="filterDiv shirts">
@@ -50,10 +52,11 @@
     <div class="filterDiv all">
       <img src="./assets/images/merch/hoodie.jpg" />
     </div>
-    <div class="filterDiv all">
+    <div class="filterDiv hat">
       <img src="./assets/images/merch/hat.jpg" />
     </div>
   </div>
+</div>
 
 <script>
 filterSelection("all")
