--- a/store.html
+++ b/store.html
@@ -34,6 +34,8 @@
 <div id="myBtnContainer">
   <button class="btn active" onclick="filterSelection('all')"> Show all</button>
   <button class="btn" onclick="filterSelection('shirts')"> Shirts</button>
+  <button class="btn" onclick="filterSelection('hoodies')"> Hoodies</button>
+  <button class="btn" onclick="filterSelection('joggers')"> Joggers</button>
   <button class="btn" onclick="filterSelection('hat')"> Hat</button>
 
   <div class="container">
@@ -46,10 +48,10 @@
     <div class="filterDiv shirts">
       <img src="./assets/images/merch/tshirt3.jpg" />
     </div>
-    <div class="filterDiv all">
+    <div class="filterDiv joggers">
       <img src="./assets/images/merch/joggers.jpg" />
     </div>
-    <div class="filterDiv all">
+    <div class="filterDiv hoodies">
       <img src="./assets/images/merch/hoodie.jpg" />
     </div>
     <div class="filterDiv hat">
