Fixing About Pg

--- a/about.html
+++ b/about.html
@@ -31,22 +31,35 @@
   <div class="container"></div>
 </section>
 
-<section>
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12">
-        <h1 class="section-title">(juh-nay. ahh-ee-ko)</h1>
+<section id="main">
+      <div class="container">
+        <article id="main-col">
+          <h1 class="page-title">(juh-nay. ahh-ee-ko)</h1>
+          <p>"I am not this image<br>I am not my name<br>(Jhene Aiko Efuru Chilombo)<br>I am not my age<br>(March 16 1988)<br>I am not my ethnicity<br>(Japanese, African American, Native American, etc….)<br>I am not where I was born and raised<br>(Los Angeles, California)<br>I am not my mistakes and misfortunes<br>I am not what I have gained and have lost<br>I am
+          </p>
+          <p>A mother to a beautiful girl named Namiko.<br>A baby sister to 3 brothers, 3 sisters and a big sister to 1.<br>The daughter of Christina Yamamoto and Karamo Chilombo<br>but more relevantly, the Daughter of Water, Earth and the Sun.
+          </p>
+          <p>I signed to Epic/TUG as a 12 year old child, and asked to be released from both companies at the age of 16 to finish high school. I escaped the made up world of Hollywood to experience the natural beauty of the real world.
+          </p>
+          <p>I am a writer, so I never stopped writing.<br>I am a singer, so I never stopped singing.<br>I am a student of life, so I never stopped learning and experiencing.
+          </p>
+          <p>Shortly before I conceived my daughter, I stepped back into the field and took a meeting with a label head . In this meeting, I was innocently told, to “sell” myself “when walking into these meetings.”
+          </p>
+          <p>That’s when I decided I would sail my “self” rather than sell my “self”.
+          </p>About a year and a half later. I conceived my second child….<br>“sailing soul(s)”, with the amazing Los Angeles based producers, Fisticuffs.
+          <p>sailing soul(s) is my first of many offerings to any and everyone who will listen and pay attention.
+          </p>The message is a simple one: love yourself in this moment, love this moment, know this moment as truth… be this moment… sail you’re soul… don’t sell you’re soul… its the only thing we can take with us, where ever it is we go…
+          <p>… “souled out” coming soon…. to be continued…"
+          </p>
+          <p><h1 class="page-title">- Jhené Aiko</h1>
+          </p>
+        </article>
+
+        <aside id="sidebar">
+            <p><img class="img-jhene" src="./assets/videos/jheneaiko.gif" alt="Jhene Aiko animated image" height="auto" width="auto"></p>
+        </aside>
       </div>
-      <div class="col-xs-12">
-        <img class="img-jhene" src="./assets/videos/jheneaiko.gif" alt="Jhene Aiko animated image" height="30%" width="30%">
-        <p>"I am not this image<br>I am not my name<br>(Jhene Aiko Efuru Chilombo)<br>I am not my age<br>(March 16 1988)<br>I am not my ethnicity<br>(Japanese, African American, Native American, etc….)<br>I am not where I was born and raised<br>(Los Angeles, California)<br>I am not my mistakes and misfortunes<br>I am not what I have gained and have lost<br>I am<br><br>A mother to a beautiful girl named Namiko.<br>A baby sister to 3 brothers, 3 sisters and a big sister to 1.<br>
-            The daughter of Christina Yamamoto and Karamo Chilombo<br>but more relevantly, the Daughter of Water, Earth and the Sun.<br><br>I signed to Epic/TUG as a 12 year old child, and asked to be released from both companies at the age of 16 to finish high school. I escaped the made up world of Hollywood to experience the natural beauty of the real world.<br><br>
-            I am a writer, so I never stopped writing.<br>I am a singer, so I never stopped singing.<br>I am a student of life, so I never stopped learning and experiencing.<br><br>Shortly before I conceived my daughter, I stepped back into the field and took a meeting with a label head . In this meeting, I was innocently told, to “sell” myself “when walking into these meetings.”<br><br>
-            That’s when I decided I would sail my “self” rather than sell my “self”.<br><br>About a year and a half later. I conceived my second child….<br>“sailing soul(s)”, with the amazing Los Angeles based producers, Fisticuffs.<br><br>sailing soul(s) is my first of many offerings to any and everyone who will listen and pay attention.<br><br>The message is a simple one: love yourself in this moment, love this moment, know this moment as truth… be this moment… sail you’re soul… don’t sell you’re soul… its the only thing we can take with us, where ever it is we go…<br><br>… “souled out” coming soon…. to be continued…" <br><br>-Jhené Aiko
-        </p>
-      </div>
-    </div>
-  </div>
-</section>
+    </section>
 
 </body>
+</html>
