--- a/media.html
+++ b/media.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="Jennifer Ortiz" content="Jhene Aiko">
-    <title>Jhené Aiko | About</title>
+    <title>Jhené Aiko | Media</title>
     <link rel="stylesheet" href="./assets/stylesheets/media.css" />
     <link rel="stylesheet" href="./assets/stylesheets/lightbox.min.css" />
   </head>
