--- a/store.html
+++ b/store.html
@@ -40,22 +40,34 @@
 
   <div class="container">
     <div class="filterDiv shirts">
-      <img src="./assets/images/merch/tshirt.jpg" />
+      <div class="not-allowed">
+        <img src="./assets/images/merch/tshirt.jpg" />
+      </div>
     </div>
     <div class="filterDiv shirts">
-      <img src="./assets/images/merch/tshirt2.jpg" />
+      <div class="not-allowed">
+        <img src="./assets/images/merch/tshirt2.jpg" />
+      </div>
     </div>
     <div class="filterDiv shirts">
-      <img src="./assets/images/merch/tshirt3.jpg" />
+      <div class="not-allowed">
+        <img src="./assets/images/merch/tshirt3.jpg" />
+      </div>
     </div>
     <div class="filterDiv joggers">
-      <img src="./assets/images/merch/joggers.jpg" />
+      <div class="not-allowed">
+        <img src="./assets/images/merch/joggers.jpg" />
+      </div>
     </div>
     <div class="filterDiv hoodies">
-      <img src="./assets/images/merch/hoodie.jpg" />
+      <div class="not-allowed">
+        <img src="./assets/images/merch/hoodie.jpg" />
+      </div>
     </div>
     <div class="filterDiv hat">
-      <img src="./assets/images/merch/hat.jpg" />
+      <div class="not-allowed">
+        <img src="./assets/images/merch/hat.jpg" />
+      </div>
     </div>
   </div>
 </div>
